@@ -3,6 +3,7 @@ Changelog:
 3.22
 - Added "Tranquillien, Ghostlands" as a required flight path for Solo route, as it links Silvermoon to EPL.
 - Added back "Summoning Shadra" as a prequest to "Venom to the Undercity"
+- SoloRoute Companion: Removed "Winterspring" as a mail pick-up spot, added "Stonard" as a mail pick-up spot. Now it matches the other routes.
 
 3.21 (2026-01-27)
 - Went through all addon files and cleaned up old/unused code, reducing filesize.
